--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,21 @@ video {
   vertical-align: middle;
 }
 
+.section {
+  display: flex;
+  background: var(--beige);
+  margin: 10px;
+  padding: 5px;
+}
+
+.box {
+  border: 1px solid var(--grey);
+  background-color: var(--white);
+  color: var(--black);
+  padding: 20px;
+  margin: 10px;
+}
+
 /* ====================================
 // base rules
 // ==================================== */
